force-app/main/default/objects/due__Diduenjoy_Feedback__c/due__Diduenjoy_Feedback__c.object-meta.xml
<CustomObject>
    <label>Diduenjoy Feedback</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diduenjoy Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>