force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Account__c.field-meta.xml
<CustomField>
    <fullName>due__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Diduenjoy Feedbacks</relationshipLabel>
    <relationshipName>Diduenjoy_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>