force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Campaign__c.field-meta.xml
<CustomField>
    <fullName>due__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Diduenjoy Feedbacks</relationshipLabel>
    <relationshipName>Diduenjoy_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>