force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Case__c.field-meta.xml
<CustomField>
    <fullName>due__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Diduenjoy Feedbacks</relationshipLabel>
    <relationshipName>Diduenjoy_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>