force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Comment__c.field-meta.xml
<CustomField>
    <fullName>due__Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>