force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Custom_1__c.field-meta.xml
<CustomField>
    <fullName>due__Custom_1__c</fullName>
    <label>Custom 1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>