force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__First_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>due__First_Resolution_Date__c</fullName>
    <label>First Resolution Date</label>
    <type>DateTime</type>
</CustomField>