force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Full_Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>due__Full_Resolution_Time__c</fullName>
    <label>Full Resolution Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>