force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__InternalId__c.field-meta.xml
<CustomField>
    <fullName>due__InternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>InternalId</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>