force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Last_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>due__Last_Opening_Date__c</fullName>
    <label>Last Opening Date</label>
    <type>DateTime</type>
</CustomField>