force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Lead__c.field-meta.xml
<CustomField>
    <fullName>due__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Diduenjoy Feedbacks</relationshipLabel>
    <relationshipName>Diduenjoy_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>