force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>due__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Diduenjoy Feedbacks</relationshipLabel>
    <relationshipName>Diduenjoy_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>