force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Permalink__c.field-meta.xml
<CustomField>
    <fullName>due__Permalink__c</fullName>
    <label>Permalink</label>
    <required>true</required>
    <type>Url</type>
</CustomField>