force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Profile__c.field-meta.xml
<CustomField>
    <fullName>due__Profile__c</fullName>
    <label>Profile</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>