force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Resolver_Email__c.field-meta.xml
<CustomField>
    <fullName>due__Resolver_Email__c</fullName>
    <label>Resolver Email</label>
    <type>Email</type>
</CustomField>