force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Segments__c.field-meta.xml
<CustomField>
    <fullName>due__Segments__c</fullName>
    <label>Segments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>