force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__SentAt__c.field-meta.xml
<CustomField>
    <fullName>due__SentAt__c</fullName>
    <label>SentAt</label>
    <type>DateTime</type>
</CustomField>