force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Solved__c.field-meta.xml
<CustomField>
    <fullName>due__Solved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solved</label>
    <type>Checkbox</type>
</CustomField>