force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__Status__c.field-meta.xml
<CustomField>
    <fullName>due__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>live</fullName>
                <default>true</default>
                <label>live</label>
            </value>
            <value>
                <fullName>soft_deleted</fullName>
            </value>
            <value>
                <fullName>deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>