force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/due__User__c.field-meta.xml
<CustomField>
    <fullName>due__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Diduenjoy_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>