force-app/main/default/objects/due__Diduenjoy_Feedback__c/fields/Treated__c.field-meta.xml
<CustomField>
    <fullName>Treated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be used in Batch processing</description>
    <label>Treated</label>
    <type>Checkbox</type>
</CustomField>