force-app/main/default/objects/due__Diduenjoy_Feedback__c/listViews/due__All.listView-meta.xml
<ListView>
    <fullName>due__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>due__Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>